--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
+    "@tabler/icons-react": "^3.4.0",
     "autoprefixer": "10.4.14",
     "lodash": "^4.17.21",
     "next": "13.4.6",
